# icebox

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  RELEASE_NOTES_v0.2.1.md  install.sh
.github/workflows/: release.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: client.rs  error.rs  lib.rs  oauth_transform.rs  sse.rs  types.rs
crates/commands/: Cargo.toml  README.md
crates/commands/src/: lib.rs
crates/icebox-cli/: Cargo.toml  README.md
crates/icebox-cli/src/: main.rs
crates/icebox-web/: Cargo.toml
crates/icebox-web/src/: main.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: config.rs  conversation.rs  lib.rs  oauth.rs  session.rs  usage.rs
crates/task/: Cargo.toml  README.md
crates/task/src/: filter.rs  frontmatter.rs  lib.rs  links.rs  memory.rs  model.rs  store.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: lib.rs  notion.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  board.rs  card.rs  column.rs  input.rs  layout.rs  lib.rs  sidebar.rs  theme.rs
docs/: notion.md  swimlane.md  web.md
