[package]
name = "icebox"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
icebox-tui = { path = "../tui" }
icebox-task = { path = "../task" }
icebox-api = { path = "../api" }
icebox-runtime = { path = "../runtime" }
icebox-tools = { path = "../tools" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
