[package]
name = "icebox-web"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "icebox-web"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
icebox-task = { path = "../task" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
