[package]
name = "icebox-tools"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
icebox-api = { path = "../api" }
icebox-runtime = { path = "../runtime" }
icebox-task = { path = "../task" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
