[package]
name = "icebox-tui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
icebox-task = { path = "../task" }
icebox-runtime = { path = "../runtime" }
icebox-commands = { path = "../commands" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
unicode-width = "0.2"
anyhow = { workspace = true }
